@@ -9,7 +9,7 @@
  * See LICENSE.MIT file for more details
  *
  * Generated by /CodeGen/cecil-gen.rb do not edit
- * Fri May 20 21:20:55 Paris, Madrid 2005
+ * Tue Jun 21 12:12:32 Paris, Madrid 2005
  *
  *****************************************************************************/
 
@@ -961,12 +961,12 @@ namespace Mono.Cecil.Cil {
         public static readonly OpCode Leave = new OpCode (
             "leave", 0xff, 0xdd, 1, FlowControl.Branch,
             OpCodeType.Primitive, OperandType.InlineBrTarget,
-            StackBehaviour.Pop0, StackBehaviour.Push0);
+            StackBehaviour.PopAll, StackBehaviour.Push0);
 
         public static readonly OpCode Leave_S = new OpCode (
             "leave.s", 0xff, 0xde, 1, FlowControl.Branch,
             OpCodeType.Primitive, OperandType.ShortInlineBrTarget,
-            StackBehaviour.Pop0, StackBehaviour.Push0);
+            StackBehaviour.PopAll, StackBehaviour.Push0);
 
         public static readonly OpCode Stind_I = new OpCode (
             "stind.i", 0xff, 0xdf, 1, FlowControl.Next,
@@ -1110,15 +1110,15 @@ namespace Mono.Cecil.Cil {
             private IDictionary m_cache;
             private OpCode [] m_oneByteOpCode;
             private OpCode [] m_twoBytesOpCodes;
-                
+
             public OpCode this [string name] {
                 get { return (OpCode) m_cache [name]; }
             }
-            
+
             internal OpCode [] OneByteOpCode {
                 get { return m_oneByteOpCode; }
             }
-            
+
             internal OpCode [] TwoBytesOpCode {
                 get { return m_twoBytesOpCodes; }
             }
