@@ -3,8 +3,13 @@
 	* Mono.Cecil.Implem/ReflectionReader.cs: Correct a bug that prevents
 		assemblies to be readed if they have an entrypoint. Suggestion by
 		Mario Sopena
-	* Mono.Cecil.Imlem/CodeReader.cs: Use sbyte not to lose negatives
+	* Mono.Cecil.Implem/CodeReader.cs: Use sbyte not to lose negatives
 		offsets. Suggestion by Vladislav Spivak
+	* CodeGen/cecil.xml,
+	  Mono.Cecil.Cil/OpCodes.cs,
+	  Mono.Cecil.Cil/StackBehaviour.cs: Add an PopAll enumeration value
+		for StackBehaviour, and set the StackBehaviourPop property for
+		leave and leave.s opcodes to it. Suggested by Vladislav Spivak
 
 2005-06-12  Jb Evain  <jbevain@gmail.com>
 
